[package]
name = "muxide"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
description = "Zero-dependency pure-Rust MP4 muxer for recording applications"
authors = ["Michael A. Kuykendall <michaelallenkuykendall@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Michael-A-Kuykendall/muxide"
homepage = "https://github.com/Michael-A-Kuykendall/muxide"
documentation = "https://docs.rs/muxide"
license = "MIT OR Apache-2.0"
keywords = ["mp4", "video", "muxer", "h264", "multimedia"]
categories = ["multimedia", "multimedia::encoding", "multimedia::video"]
exclude = [
	".github/",
	".vscode/",
	"target/",
	"**/*.mp4",
	"**/*.gif",
	"**/*.rgb",
	"**/*.h264",
]

[dependencies]

[dev-dependencies]
lazy_static = "1.4"
proptest = "1.4"
